@@ -1,3 +1,7 @@
+2008-02-03  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/po.rb: URI fragment.
+
 2007-10-14  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/po.rb: (Gluon::PresentationObject class) NOT operator
